--- a/dice.cabal
+++ b/dice.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Dice
   build-depends:       base >= 4.7 && < 5
                      , random
+  ghc-options:         -Wall
   default-language:    Haskell2010
 
 -- executable dice-exe
